--- a/website.html
+++ b/website.html
@@ -1,132 +1,30 @@
+<!DOCTYPE html>
+<!--
+Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
+Click nbfs://nbhost/SystemFileSystem/Templates/Project/PHP/PHPProject.php to edit this template
+
+-->
 <?php 
     include_once 'header.php';
 ?>
-
-
-       <html>
+<html>
     <head>
         <meta charset="UTF-8">
-        <style>
-             body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        .video-container {
-            text-align: center;
-            margin-top: 30px;
-            padding: 20px;
-            background-color: #f9f9f9;
-        }
-
-        .videotext {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-
-        .centered {
-            width: 100%;
-            height: 400px;
-            border: none;
-        }
-
-        .text-container {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        .custom-pre {
-            background-color: #f9f9f9;
-            padding: 10px;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-    .image-container {
-        text-align: center;
-    }
-
-    .image-container img {
-        width: 150px; /* Set the desired width for the images */
-        height: 150px; /* Set the desired height for the images */
-        object-fit: cover; /* This ensures the images maintain their aspect ratio and fill the container */
-        border-radius: 50%; /* Makes the images circular if needed */
-        margin: 10px; /* Adds some space between the images */
-    }
-    .center-content {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh; /* Adjust the height if needed */
-            text-align: center;
-        }
-    /* Additional styling for text */
-    .image-container p {
-        margin: 5px 0;
-    }
-</style>
-
+        <title>Share A Meal</title>
+        <link rel="stylesheet" href="style.css">
     </head>
-   <body>
-        <div class="center-content">
-        <?php
-        if (isset($_SESSION['useruid'])) {
-            echo '<h1>Hello There ' . $_SESSION['useruid'] . '!</h1>';
-        }
-        ?></div>
-    <?php include_once 'carousel.php'; ?>
-
-    <div class="container">
-        <div class="team">
-    <h1 class="team-text" style="font-size: 35px;">Our Team</h1>
-
-    <div class="image-container">
-        <img src="image/joseph.jpg" alt="Image 1">
-        <p>Joseph</p>
-        <p>P2220640</p>
-    </div>
-
-    <div class="image-container">
-        <img src="image/guanrui.jpg" alt="Image 2">
-        <p>Guan Rui</p>
-        <p>P2220541</p>
-    </div>
-
-    <div class="image-container">
-        <img src="image/edward.jpg" alt="Image 3">
-        <p>Edward</p>
-        <p>P2220400</p>
-    </div>
-</div>
-
-        <div class="video-container">
-            <h1 class="videotext">Watch this video to learn more about what we do!</h1>
-            <iframe class="centered" src="https://www.youtube.com/embed/Fs8Aetzsuuw" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div class="text-container">
-                <pre class="custom-pre">
-The reality is that about 10% of Singaporean households
-(citizens and/or permanent residents) in this nationally 
-representative study of close to 1,200 surveyed households 
-experienced food insecurity at least once in the last 12 months,
-with two out of five of these households experiencing food insecurity at least once
-                </pre>
-            </div>
+    <body>
+        
+        <div class="content">
+            <h1 class="slide-left">Share A Meal</h1>
+            <p class="slide-left">We wish to make Singapore the first country without food insecurity and food shortage.
+                Singapore is vulnerable to supply shocks and disruptions as we import more than 90 per cent of our food.
+            For greater food resilience, we have set a “30 by 30” goal – to be able to produce 30 per cent of our nutritional needs by 2030. </p>
+            <div class="links slide-left">
+                <a href="about.php" class="btn">Learn More</a>
+                <a href="contact.php">Contact</a>
+            </div>    
+                
         </div>
-
-        <?php include_once 'donation_list.php'; ?>
-        <?php include_once 'donatebutton.php'; ?>
-    </div>
-
-    <?php include_once 'footer.php'; ?>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+    </body>
 </html>
