--- a/index.html
+++ b/index.html
@@ -1,92 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Store</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        header {
-            background-color: #333;
-            color: white;
-            padding: 1em;
-            text-align: center;
-        }
-
-        nav {
-            background-color: #444;
-            overflow: hidden;
-        }
-
-        nav a {
-            float: left;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        nav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        section {
-            padding: 20px;
-        }
-
-        .item {
-            float: left;
-            margin: 20px;
-        }
-
-        img {
-            width: 200px;
-            height: 200px;
-            object-fit: cover;
-        }
-    </style>
+    <title>Share A Meal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <header>
-        <h1>Online Store</h1>
-    </header>
-
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#clothing">Clothing</a>
-        <a href="#electronics">Electronics</a>
-        <a href="#books">Books</a>
-    </nav>
-
-    <section>
-        <div class="item">
-            <img src="clothing.jpg" alt="Clothing">
-            <p>Clothing Item 1</p>
-            <p>$19.99</p>
-        </div>
-
-        <div class="item">
-            <img src="electronics.jpg" alt="Electronics">
-            <p>Electronics Item 1</p>
-            <p>$49.99</p>
-        </div>
-
-        <div class="item">
-            <img src="books.jpg" alt="Books">
-            <p>Book Item 1</p>
-            <p>$9.99</p>
-        </div>
-    </section>
+    <img src="vendingmachine.jpg">
+    <div class="content">
+        <h1 class="slide-left">Share A Meal</h1>
+        <p class="slide-left">We wish to make Singapore the first country without food insecurity and food shortage.
+            Singapore is vulnerable to supply shocks and disruptions as we import more than 90 per cent of our food.
+            For greater food resilience, we have set a “30 by 30” goal – to be able to produce 30 per cent of our nutritional needs by 2030. </p>
+        <div class="links slide-left">
+            <a href="about.php" class="btn">Learn More</a>
+            <a href="contact.php">Contact</a>
+        </div>    
+    </div>
 
 </body>
 </html>
-
