--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
         }
 
         img {
-            width: 200px;
-            height: 200px;
+            
             object-fit: cover;
         }
     </style>
@@ -70,19 +69,22 @@
 
     <section>
         <div class="item">
-            <img src="drink1.jpg" alt="Clothing">
+            <img style="width: 200px;
+            height: 200px;" src="drink1.jpg" alt="Clothing">
             <p>Drink 1</p>
             <p>$9.99</p>
         </div>
 
         <div class="item">
-            <img src="drink2.jpg" alt="Electronics">
+            <img style="width: 200px;
+            height: 200px;" src="drink2.jpg" alt="Electronics">
             <p>Drink 2</p>
             <p>$9.99</p>
         </div>
 
         <div class="item">
-            <img src="drink3.jpg" alt="Books">
+            <img style="width: 200px;
+            height: 200px;" src="drink3.jpg" alt="Books">
             <p>Drink 3</p>
             <p>$9.99</p>
         </div>
