--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         }
 
         img {
-            
+            max-width: 100%;
+            height: auto;
             object-fit: cover;
         }
     </style>
