--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
             height: 100px;" src="drink1.jpg" alt="Clothing">
             <p>Drink 1</p>
             <p>$9.99</p>
+            <button class="buy-button" onclick="location.href='payment_input.html?drink=1'">Buy Now</button>
+
         </div>
 
         <div class="item">
@@ -81,6 +83,8 @@
             height: 100px;" src="drink2.jpg" alt="Electronics">
             <p>Drink 2</p>
             <p>$9.99</p>
+            <button class="buy-button" onclick="location.href='payment_input.html?drink=2'">Buy Now</button>
+
         </div>
 
         <div class="item">
@@ -88,6 +92,8 @@
             height: 100px;" src="drink3.jpg" alt="Books">
             <p>Drink 3</p>
             <p>$9.99</p>
+            <button class="buy-button" onclick="location.href='payment_input.html?drink=3'">Buy Now</button>
+
         </div>
     </section>
 
