--- a/index.html
+++ b/index.html
@@ -70,29 +70,29 @@
 
     <section>
         <div class="item">
-            <img style="width: 100px;
-            height: 100px;" src="drink1.jpg" alt="Clothing">
+            <img style="width: 200px;
+            height: 200px;" src="drink1.jpg" alt="Clothing">
             <p>Drink 1</p>
             <p>$9.99</p>
-            <button class="buy-button" onclick="location.href='payment_input.html?drink=1'">Buy Now</button>
+            <button class="buy-button" onclick="location.href='payment_input.html'">Buy Now</button>
 
         </div>
 
         <div class="item">
-            <img style="width: 100px;
-            height: 100px;" src="drink2.jpg" alt="Electronics">
+            <img style="width: 200px;
+            height: 200px;" src="drink2.jpg" alt="Electronics">
             <p>Drink 2</p>
             <p>$9.99</p>
-            <button class="buy-button" onclick="location.href='payment_input.html?drink=2'">Buy Now</button>
+            <button class="buy-button" onclick="location.href='payment_input.html'">Buy Now</button>
 
         </div>
 
         <div class="item">
-            <img style="width: 100px;
-            height: 100px;" src="drink3.jpg" alt="Books">
+            <img style="width: 200px;
+            height: 200px;" src="drink3.jpg" alt="Books">
             <p>Drink 3</p>
             <p>$9.99</p>
-            <button class="buy-button" onclick="location.href='payment_input.html?drink=3'">Buy Now</button>
+            <button class="buy-button" onclick="location.href='payment_input.html'">Buy Now</button>
 
         </div>
     </section>
