--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
     <section>
         <div class="item">
+            <a href='payment_input.html'>
             <img style="width: 200px;
             height: 200px;" src="drink1.jpg" alt="Clothing">
             <p>Drink 1</p>
@@ -79,6 +80,7 @@
         </div>
 
         <div class="item">
+            <a href='payment_input.html'>
             <img style="width: 200px;
             height: 200px;" src="drink2.jpg" alt="Electronics">
             <p>Drink 2</p>
@@ -88,6 +90,7 @@
         </div>
 
         <div class="item">
+            <a href='payment_input.html'>
             <img style="width: 200px;
             height: 200px;" src="drink3.jpg" alt="Books">
             <p>Drink 3</p>
