--- a/payment_input.html
+++ b/payment_input.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Credit Card Input</title>
-        <link href="https://fonts.googleapis.com/css?family=Raleway|Rock+Salt|Source+Code+Pro:300,400,600" rel="stylesheet"><link rel="stylesheet" href="./payment_input.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway|Rock+Salt|Source+Code+Pro:300,400,600" rel="stylesheet"><link rel="stylesheet" href="payment_input.css">
 
         <style>
             .button-container {
@@ -156,7 +156,7 @@
             </div>
         </div>
         <!-- partial -->
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/imask/3.4.0/imask.min.js'></script><script  src="./script.js"></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/imask/3.4.0/imask.min.js'></script><script  src="payment_input.js"></script>
         <div class="button-container">
             <button class="redirect-button" onclick="window.location.href = 'thanks_for_purchase.html'">Proceed</button>
             <button class="redirect-button" onclick="window.location.href = 'index.html'">Back</button></div>
