--- a/thanks_for_purchase.html
+++ b/thanks_for_purchase.html
@@ -20,7 +20,7 @@
     </header>
 
     <div class="main-content">
-        <i class="fa fa-check main-content__checkmark" id="checkmark"></i>
+        <img src="C:\Users\Julian\Downloads\barcode.gif" alt="Barcode coke">
         <p class="main-content__body" data-lead-id="main-content-body">Thank you for your purchase! Please come back again!</p>
         
         <!-- Additional content -->
