--- a/payment_input.html
+++ b/payment_input.html
@@ -3,29 +3,30 @@
     <head>
         <meta charset="UTF-8">
         <title>Credit Card Input</title>
-        <link href="https://fonts.googleapis.com/css?family=Raleway|Rock+Salt|Source+Code+Pro:300,400,600" rel="stylesheet"><link rel="stylesheet" href="payment_input.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway|Rock+Salt|Source+Code+Pro:300,400,600" rel="stylesheet">
+        <link rel="stylesheet" href="./payment_input.css">
 
         <style>
             .button-container {
-            text-align: center;
-            margin-top: 20px;
-        }
+                text-align: center;
+                margin-top: 20px;
+            }
 
-        .redirect-button {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #4CAF50; /* Green color, you can change this */
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease; /* Smooth transition effect on hover */
-            margin-right: 10px;
-        }
+            .redirect-button {
+                padding: 10px 20px;
+                font-size: 16px;
+                background-color: #4CAF50; /* Green color, you can change this */
+                color: white;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                transition: background-color 0.3s ease; /* Smooth transition effect on hover */
+                margin-right: 10px;
+            }
 
-        .redirect-button:hover {
-            background-color: #45a049; /* Darker green color on hover, you can change this */
-        }
+            .redirect-button:hover {
+                background-color: #45a049; /* Darker green color on hover, you can change this */
+            }
 
         </style>
     </head>
@@ -156,9 +157,31 @@
             </div>
         </div>
         <!-- partial -->
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/imask/3.4.0/imask.min.js'></script><script  src="payment_input.js"></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/imask/3.4.0/imask.min.js'></script><script  src="./payment_input.js"></script>
         <div class="button-container">
-            <button class="redirect-button" onclick="window.location.href = 'thanks_for_purchase.html'">Proceed</button>
-            <button class="redirect-button" onclick="window.location.href = 'index.html'">Back</button></div>
+            <button class="redirect-button" onclick="proceed()">Proceed</button>
+            <button class="redirect-button" onclick="window.location.href = 'index.html'">Back</button>
+        </div>
+        
+        <script>
+            function proceed() {
+                // Validate form fields before proceeding
+                var name = document.getElementById('name').value;
+                var cardNumber = document.getElementById('cardnumber').value;
+                var expirationDate = document.getElementById('expirationdate').value;
+                var securityCode = document.getElementById('securitycode').value;
+
+                // Check if any field is empty
+                if (name === '' || cardNumber === '' || expirationDate === '' || securityCode === '') {
+                    alert('Please fill in all fields before proceeding.');
+                    return;
+                }
+
+                // Add more specific validation if needed
+
+                // If all fields are filled, proceed to the next page
+                window.location.href = 'thanks_for_purchase.html';
+            }
+        </script>
     </body>
 </html>
