--- a/thanks_for_purchase.html
+++ b/thanks_for_purchase.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://2-22-4-dot-lead-pages.appspot.com/static/lp918/min/default_thank_you.css">
     <script src="https://2-22-4-dot-lead-pages.appspot.com/static/lp918/min/jquery-1.9.1.min.js"></script>
     <script src="https://2-22-4-dot-lead-pages.appspot.com/static/lp918/min/html5shiv.js"></script>
+    <script src="JsBarcode.all.min.js"></script>
 </head>
 <body>
     <header class="site-header" id="header">
@@ -20,7 +21,7 @@
     </header>
 
     <div class="main-content">
-        <img src="C:\Users\Julian\Downloads\barcode.gif" alt="Barcode coke">
+        <img src="barcode.gif" alt="Barcode coke">
         <p class="main-content__body" data-lead-id="main-content-body">Thank you for your purchase! Please come back again!</p>
         
         <!-- Additional content -->
