--- a/thanks_for_purchase.html
+++ b/thanks_for_purchase.html
@@ -28,7 +28,7 @@
   jsbarcode-textmargin="0"
   jsbarcode-fontoptions="bold">
 </svg>
-        JsBarcode(".barcode").init();
+        <script>JsBarcode(".barcode").init();</script>
         <p class="main-content__body" data-lead-id="main-content-body">Thank you for your purchase! Please come back again!</p>
         
         <!-- Additional content -->
