--- a/thanks_for_purchase.html
+++ b/thanks_for_purchase.html
@@ -23,7 +23,7 @@
     <div class="main-content">
         <img src="barcode.gif" alt="Barcode coke">
         <svg id="barcode"></svg>
-        <script>JsBarcode("#barcode", "Hi!");</script>
+        <script>JsBarcode("#barcode", "10209029");</script>
         <p class="main-content__body" data-lead-id="main-content-body">Thank you for your purchase! Please come back again!</p>
         
         <!-- Additional content -->
