--- a/thanks_for_purchase.html
+++ b/thanks_for_purchase.html
@@ -17,18 +17,14 @@
     <script>JsBarcode(".barcode").init();</script>
 </head>
 <body>
+    
     <header class="site-header" id="header">
         <h1 class="site-header__title" data-lead-id="site-header-title">THANK YOU!</h1>
     </header>
 
     <div class="main-content">
         <img src="barcode.gif" alt="Barcode coke">
-        <svg class="barcode"
-  jsbarcode-format="upc"
-  jsbarcode-value="123456789012"
-  jsbarcode-textmargin="0"
-  jsbarcode-fontoptions="bold">
-</svg>
+        <svg class="barcode" jsbarcode-format="upc" jsbarcode-value="123456789012" jsbarcode-textmargin="0" jsbarcode-fontoptions="bold"></svg>
         <p class="main-content__body" data-lead-id="main-content-body">Thank you for your purchase! Please come back again!</p>
         
         <!-- Additional content -->
